# email-signature-removal

./: .gitignore  README.md  email_content_parser.py  pyproject.toml  requirements.txt
